--- a/home_shortnews.html
+++ b/home_shortnews.html
@@ -135,6 +135,60 @@
     ]
   },
   {
+    "title": "Những người nước ngoài đến Việt Nam khởi nghiệp",
+    "content": "Bài viết kể về những người nước ngoài, trong đó có Graeme và Aric, đã chọn Việt Nam, đặc biệt là TP HCM, để khởi nghiệp. Graeme, sau chuyến du lịch Việt Nam, đã mở một quán cà phê và một trung tâm phục hồi chức năng thể thao, trong khi Aric phát triển dịch vụ lưu trữ đồ đạc. Cả hai đều nhận thấy tiềm năng mạnh mẽ của thị trường Việt Nam với chi phí thấp và lực lượng lao động trẻ, mặc dù họ cũng gặp phải một số thách thức trong việc thích ứng với văn hóa kinh doanh địa phương.",
+    "link": "https://vnexpress.net/nhung-nguoi-nuoc-ngoai-den-viet-nam-khoi-nghiep-4859076.html",
+    "cat": "kinh-doanh",
+    "positivity": 8,
+    "importance": 7,
+    "question": "Tại sao nhiều người nước ngoài chọn Việt Nam để khởi nghiệp?",
+    "answers": [
+      {
+        "text": "Vì chi phí sinh hoạt và khởi nghiệp thấp.",
+        "correct": true
+      },
+      {
+        "text": "Vì thời tiết đẹp quanh năm.",
+        "correct": false
+      },
+      {
+        "text": "Vì có nhiều cơ hội việc làm cho người nước ngoài.",
+        "correct": false
+      },
+      {
+        "text": "Vì Việt Nam có nhiều món ăn ngon.",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Trẻ em không phải cỗ máy đạt thành tích",
+    "content": "Bài viết nhấn mạnh rằng việc đặt kỳ vọng quá cao vào trẻ em trong học tập có thể dẫn đến áp lực tâm lý nghiêm trọng và ảnh hưởng đến sức khỏe tinh thần của các em. Nhiều phụ huynh mong muốn con cái đạt thành tích vượt trội, điều này vô tình tạo ra gánh nặng cho trẻ. Các chuyên gia khuyên rằng cần tạo môi trường học tập thoải mái, giúp trẻ phát triển phẩm chất và năng lực mà không bị áp lực thành tích quá lớn.",
+    "link": "https://dantri.com.vn/giao-duc/tre-em-khong-phai-co-may-dat-thanh-tich-20250314105932953.htm",
+    "cat": "giao-duc",
+    "positivity": 6,
+    "importance": 8,
+    "question": "Tại sao trẻ em không nên bị áp lực trong học tập?",
+    "answers": [
+      {
+        "text": "Vì điều này có thể gây tổn thương tâm lý cho trẻ.",
+        "correct": true
+      },
+      {
+        "text": "Vì trẻ em cần phải thi đấu để có thành tích cao.",
+        "correct": false
+      },
+      {
+        "text": "Vì trẻ em nên chỉ học cho vui mà không cần kết quả.",
+        "correct": false
+      },
+      {
+        "text": "Vì áp lực giúp trẻ em phát triển nhanh hơn.",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Kim Soo Hyun bị tố nói dối, công bố tâm thư của mẹ Kim Sae Ron",
     "content": "Kim Soo Hyun đã bị cáo buộc nói dối về mốc thời gian hẹn hò với Kim Sae Ron trong một buổi phát sóng trực tuyến của kênh YouTube Viện Garo Sero. Kênh này đã công bố tâm thư của mẹ Kim Sae Ron, trong đó bà khẳng định con gái mình không phải là người như truyền thông đã miêu tả và yêu cầu pháp luật can thiệp vào những thông tin sai lệch. Đồng thời, công ty quản lý của Kim Soo Hyun cũng xác nhận rằng tài tử này đang gặp áp lực tâm lý và có thể đã rời Hàn Quốc.",
     "link": "https://dantri.com.vn/giai-tri/kim-soo-hyun-bi-to-noi-doi-cong-bo-tam-thu-cua-me-kim-sae-ron-20250314200757713.htm",
@@ -161,33 +215,6 @@
       },
       {
         "text": "Không hợp tác với truyền thông",
-        "correct": false
-      }
-    ]
-  },
-  {
-    "title": "Những người nước ngoài đến Việt Nam khởi nghiệp",
-    "content": "Bài viết kể về những người nước ngoài, trong đó có Graeme và Aric, đã chọn Việt Nam, đặc biệt là TP HCM, để khởi nghiệp. Graeme, sau chuyến du lịch Việt Nam, đã mở một quán cà phê và một trung tâm phục hồi chức năng thể thao, trong khi Aric phát triển dịch vụ lưu trữ đồ đạc. Cả hai đều nhận thấy tiềm năng mạnh mẽ của thị trường Việt Nam với chi phí thấp và lực lượng lao động trẻ, mặc dù họ cũng gặp phải một số thách thức trong việc thích ứng với văn hóa kinh doanh địa phương.",
-    "link": "https://vnexpress.net/nhung-nguoi-nuoc-ngoai-den-viet-nam-khoi-nghiep-4859076.html",
-    "cat": "kinh-doanh",
-    "positivity": 8,
-    "importance": 7,
-    "question": "Tại sao nhiều người nước ngoài chọn Việt Nam để khởi nghiệp?",
-    "answers": [
-      {
-        "text": "Vì chi phí sinh hoạt và khởi nghiệp thấp.",
-        "correct": true
-      },
-      {
-        "text": "Vì thời tiết đẹp quanh năm.",
-        "correct": false
-      },
-      {
-        "text": "Vì có nhiều cơ hội việc làm cho người nước ngoài.",
-        "correct": false
-      },
-      {
-        "text": "Vì Việt Nam có nhiều món ăn ngon.",
         "correct": false
       }
     ]
@@ -309,33 +336,6 @@
     ]
   },
   {
-    "title": "Sa bẫy mua 'thần dược' trên mạng",
-    "content": "Chị Lan đã mua loại \"thần dược\" được quảng cáo trên TikTok nhằm giúp con gái tăng cân, nhưng sau một tháng sử dụng, bé không những không tăng cân mà còn bị rối loạn nội tiết. Nhiều người khác cũng rơi vào bẫy tương tự khi sử dụng thuốc giảm cân và mỹ phẩm không rõ nguồn gốc, dẫn đến những tác hại nghiêm trọng cho sức khỏe. Bộ Y tế đã cảnh báo về tình trạng quảng cáo sai lệch và yêu cầu người dân thận trọng khi mua sản phẩm qua mạng, đồng thời đề xuất các biện pháp quản lý chặt chẽ hơn đối với việc kinh doanh thuốc trực tuyến.",
-    "link": "https://vnexpress.net/sa-bay-mua-than-duoc-tren-mang-4855106.html",
-    "cat": "suc-khoe",
-    "positivity": 2,
-    "importance": 9,
-    "question": "Tại sao nhiều người tiêu dùng lại bị lừa khi mua thuốc trên mạng?",
-    "answers": [
-      {
-        "text": "Vì quảng cáo thổi phồng công dụng của sản phẩm.",
-        "correct": true
-      },
-      {
-        "text": "Do giá sản phẩm quá cao.",
-        "correct": false
-      },
-      {
-        "text": "Vì sản phẩm có nguồn gốc xuất xứ rõ ràng.",
-        "correct": false
-      },
-      {
-        "text": "Do người tiêu dùng không quan tâm đến thông tin sản phẩm.",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "Phối cảnh công viên điện ảnh Thủ Thiêm ven sông Sài Gòn",
     "content": "Công viên điện ảnh Thủ Thiêm ven sông Sài Gòn sẽ bao gồm 7 khu chức năng chính, nhằm tạo nên một điểm nhấn văn hóa cho TP HCM. Các khu chức năng bao gồm phim trường, bảo tàng điện ảnh, khu thương mại và dịch vụ, cùng với sân khấu sự kiện và rạp chiếu phim ven sông. Dự án được chia thành ba giai đoạn phát triển, với mục tiêu không chỉ nâng cao trải nghiệm văn hóa cho du khách mà còn cải thiện cảnh quan khu vực ven sông.",
     "link": "https://vnexpress.net/phoi-canh-cong-vien-dien-anh-thu-thiem-ven-song-sai-gon-4861047.html",
@@ -362,6 +362,33 @@
       },
       {
         "text": "3",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Sa bẫy mua 'thần dược' trên mạng",
+    "content": "Chị Lan đã mua loại \"thần dược\" được quảng cáo trên TikTok nhằm giúp con gái tăng cân, nhưng sau một tháng sử dụng, bé không những không tăng cân mà còn bị rối loạn nội tiết. Nhiều người khác cũng rơi vào bẫy tương tự khi sử dụng thuốc giảm cân và mỹ phẩm không rõ nguồn gốc, dẫn đến những tác hại nghiêm trọng cho sức khỏe. Bộ Y tế đã cảnh báo về tình trạng quảng cáo sai lệch và yêu cầu người dân thận trọng khi mua sản phẩm qua mạng, đồng thời đề xuất các biện pháp quản lý chặt chẽ hơn đối với việc kinh doanh thuốc trực tuyến.",
+    "link": "https://vnexpress.net/sa-bay-mua-than-duoc-tren-mang-4855106.html",
+    "cat": "suc-khoe",
+    "positivity": 2,
+    "importance": 9,
+    "question": "Tại sao nhiều người tiêu dùng lại bị lừa khi mua thuốc trên mạng?",
+    "answers": [
+      {
+        "text": "Vì quảng cáo thổi phồng công dụng của sản phẩm.",
+        "correct": true
+      },
+      {
+        "text": "Do giá sản phẩm quá cao.",
+        "correct": false
+      },
+      {
+        "text": "Vì sản phẩm có nguồn gốc xuất xứ rõ ràng.",
+        "correct": false
+      },
+      {
+        "text": "Do người tiêu dùng không quan tâm đến thông tin sản phẩm.",
         "correct": false
       }
     ]
@@ -1248,6 +1275,33 @@
     ]
   },
   {
+    "title": "Vô sinh sau 4 lần nạo hút thai",
+    "content": "Chị Thùy, 36 tuổi, đã trải qua 4 lần nạo hút thai và gặp phải biến chứng dính lòng tử cung, dẫn đến tình trạng vô sinh. Sau khi được phẫu thuật nội soi để điều trị, chị đã có thai được 5 tuần. Các bác sĩ khuyến cáo rằng nạo hút thai có thể làm tăng nguy cơ vô sinh do tổn thương ở tử cung và hệ thống sinh sản. Phụ nữ nên đi khám định kỳ để phát hiện sớm các bất thường liên quan đến sức khỏe sinh sản.",
+    "link": "https://vnexpress.net/vo-sinh-sau-4-lan-nao-hut-thai-4861387.html",
+    "cat": "suc-khoe",
+    "positivity": 7,
+    "importance": 8,
+    "question": "Tại sao chị Thùy lại bị vô sinh?",
+    "answers": [
+      {
+        "text": "Do biến chứng dính lòng tử cung sau nhiều lần nạo hút thai",
+        "correct": true
+      },
+      {
+        "text": "Vì tuổi tác quá lớn",
+        "correct": false
+      },
+      {
+        "text": "Do không chăm sóc sức khỏe",
+        "correct": false
+      },
+      {
+        "text": "Vì không ăn uống đầy đủ",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Đồng đội cũ giàu gấp bảy lần Ronaldo",
     "content": "Louis Saha, cựu cầu thủ Man Utd, đã xây dựng một sự nghiệp kinh doanh thành công với công ty AxisStars, giúp gia sản của anh tăng lên 5,6 tỷ USD, gấp bảy lần tài sản của Cristiano Ronaldo, 780 triệu USD. Saha cùng Ronaldo đã thi đấu tại Man Utd từ 2004 đến 2008 và đã giành nhiều danh hiệu. Bên cạnh đó, Saha còn nhấn mạnh tầm quan trọng của việc hỗ trợ các cựu vận động viên trong việc tìm kiếm cơ hội nghề nghiệp sau khi giải nghệ.",
     "link": "https://vnexpress.net/dong-doi-cu-giau-gap-bay-lan-ronaldo-4861379.html",
@@ -1274,33 +1328,6 @@
       },
       {
         "text": "Đầu tư vào bất động sản",
-        "correct": false
-      }
-    ]
-  },
-  {
-    "title": "Vô sinh sau 4 lần nạo hút thai",
-    "content": "Chị Thùy, 36 tuổi, đã trải qua 4 lần nạo hút thai và gặp phải biến chứng dính lòng tử cung, dẫn đến tình trạng vô sinh. Sau khi được phẫu thuật nội soi để điều trị, chị đã có thai được 5 tuần. Các bác sĩ khuyến cáo rằng nạo hút thai có thể làm tăng nguy cơ vô sinh do tổn thương ở tử cung và hệ thống sinh sản. Phụ nữ nên đi khám định kỳ để phát hiện sớm các bất thường liên quan đến sức khỏe sinh sản.",
-    "link": "https://vnexpress.net/vo-sinh-sau-4-lan-nao-hut-thai-4861387.html",
-    "cat": "suc-khoe",
-    "positivity": 7,
-    "importance": 8,
-    "question": "Tại sao chị Thùy lại bị vô sinh?",
-    "answers": [
-      {
-        "text": "Do biến chứng dính lòng tử cung sau nhiều lần nạo hút thai",
-        "correct": true
-      },
-      {
-        "text": "Vì tuổi tác quá lớn",
-        "correct": false
-      },
-      {
-        "text": "Do không chăm sóc sức khỏe",
-        "correct": false
-      },
-      {
-        "text": "Vì không ăn uống đầy đủ",
         "correct": false
       }
     ]
@@ -2446,33 +2473,6 @@
     ]
   },
   {
-    "title": "Khi nào trẻ cần phẫu thuật nạo VA?",
-    "content": "Trẻ cần phẫu thuật nạo VA khi bị viêm VA tái phát nhiều lần, cụ thể là từ 6 lần mỗi năm trở lên hoặc khi VA quá phát gây tắc đường thở. Phẫu thuật nạo VA giúp loại bỏ mô viêm, giảm nguy cơ viêm tai giữa, viêm họng, và các bệnh lý khác. Mặc dù phẫu thuật là phương pháp cuối cùng, nhưng rất ít trường hợp tái phát VA sau khi phẫu thuật.",
-    "link": "https://vnexpress.net/khi-nao-tre-can-phau-thuat-nao-va-4861269.html",
-    "cat": "suc-khoe",
-    "positivity": 8,
-    "importance": 7,
-    "question": "Khi nào trẻ cần phẫu thuật nạo VA?",
-    "answers": [
-      {
-        "text": "Khi trẻ viêm VA tái phát trên 6 lần mỗi năm.",
-        "correct": true
-      },
-      {
-        "text": "Khi trẻ bị cảm lạnh thông thường.",
-        "correct": false
-      },
-      {
-        "text": "Khi trẻ có triệu chứng đau họng nhẹ.",
-        "correct": false
-      },
-      {
-        "text": "Khi trẻ bị viêm phổi.",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "Khó thở sau mắc cúm A có phải phổi chưa hồi phục?",
     "content": "Bài viết đề cập đến tình trạng khó thở và mệt mỏi sau khi mắc cúm A. Có thể đây là dấu hiệu cho thấy phổi chưa hồi phục hoàn toàn do virus cúm A có thể gây tổn thương tế bào phổi. Người bệnh nên kiểm tra chức năng phổi để đánh giá mức độ tổn thương và có các biện pháp phục hồi, bao gồm lối sống lành mạnh và tiêm vaccine cúm hàng năm để ngăn ngừa tái nhiễm.",
     "link": "https://vnexpress.net/kho-tho-sau-mac-cum-a-co-phai-phoi-chua-hoi-phuc-4861323.html",
@@ -2495,6 +2495,33 @@
       },
       {
         "text": "Có, chỉ cần nghỉ ngơi là đủ.",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Khi nào trẻ cần phẫu thuật nạo VA?",
+    "content": "Trẻ cần phẫu thuật nạo VA khi bị viêm VA tái phát nhiều lần, cụ thể là từ 6 lần mỗi năm trở lên hoặc khi VA quá phát gây tắc đường thở. Phẫu thuật nạo VA giúp loại bỏ mô viêm, giảm nguy cơ viêm tai giữa, viêm họng, và các bệnh lý khác. Mặc dù phẫu thuật là phương pháp cuối cùng, nhưng rất ít trường hợp tái phát VA sau khi phẫu thuật.",
+    "link": "https://vnexpress.net/khi-nao-tre-can-phau-thuat-nao-va-4861269.html",
+    "cat": "suc-khoe",
+    "positivity": 8,
+    "importance": 7,
+    "question": "Khi nào trẻ cần phẫu thuật nạo VA?",
+    "answers": [
+      {
+        "text": "Khi trẻ viêm VA tái phát trên 6 lần mỗi năm.",
+        "correct": true
+      },
+      {
+        "text": "Khi trẻ bị cảm lạnh thông thường.",
+        "correct": false
+      },
+      {
+        "text": "Khi trẻ có triệu chứng đau họng nhẹ.",
+        "correct": false
+      },
+      {
+        "text": "Khi trẻ bị viêm phổi.",
         "correct": false
       }
     ]
@@ -3292,6 +3319,37 @@
     ]
   },
   {
+    "title": "Yếu tố thuyết phục khách nữ của Toyota Vios",
+    "content": "Bài viết phân tích yếu tố thuyết phục khách hàng nữ khi chọn mua Toyota Vios, đặc biệt là những gia đình trẻ. Toyota Vios được ưa chuộng nhờ thiết kế hiện đại, tính năng an toàn cao và khả năng tiết kiệm nhiên liệu, phù hợp với nhu cầu của phụ nữ lái xe. Những công nghệ hỗ trợ lái và thiết kế tiện nghi của Vios đã giúp chiếc xe này trở thành lựa chọn hàng đầu trong phân khúc sedan cỡ B tại Việt Nam.",
+    "link": "https://vnexpress.net/yeu-to-thuyet-phuc-khach-nu-cua-toyota-vios-4858857.html",
+    "cat": "oto-xe-may",
+    "positivity": 8,
+    "importance": 7,
+    "question": "Tại sao khách hàng nữ lại chọn Toyota Vios?",
+    "answers": [
+      {
+        "text": "Vì xe có thiết kế hiện đại và tính năng an toàn cao.",
+        "correct": true
+      },
+      {
+        "text": "Vì xe có động cơ mạnh mẽ hơn các mẫu khác.",
+        "correct": false
+      },
+      {
+        "text": "Vì xe có giá bán thấp nhất trên thị trường.",
+        "correct": false
+      },
+      {
+        "text": "Vì xe không tốn nhiều xăng khi chạy.",
+        "correct": false
+      },
+      {
+        "text": "Vì xe có nhiều màu sắc lựa chọn.",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Cắt túi mật có giảm tuổi thọ?",
     "content": "Cắt túi mật không làm giảm tuổi thọ của người bệnh. Sau phẫu thuật, gan sẽ tiếp tục sản xuất dịch mật và đưa trực tiếp vào ruột non, giúp tiêu hóa thức ăn. Mặc dù người bệnh có thể gặp một số triệu chứng khó chịu trong thời gian đầu như đau và rối loạn tiêu hóa, nhưng sau khoảng ba tháng, cơ thể sẽ thích nghi và các triệu chứng này sẽ giảm dần. Việc tuân thủ chỉ định của bác sĩ và chăm sóc sức khỏe hợp lý là rất quan trọng sau phẫu thuật.",
     "link": "https://vnexpress.net/cat-tui-mat-co-giam-tuoi-tho-4861170.html",
@@ -3341,37 +3399,6 @@
       },
       {
         "text": "Nên ăn thịt nướng hàng ngày.",
-        "correct": false
-      }
-    ]
-  },
-  {
-    "title": "Yếu tố thuyết phục khách nữ của Toyota Vios",
-    "content": "Bài viết phân tích yếu tố thuyết phục khách hàng nữ khi chọn mua Toyota Vios, đặc biệt là những gia đình trẻ. Toyota Vios được ưa chuộng nhờ thiết kế hiện đại, tính năng an toàn cao và khả năng tiết kiệm nhiên liệu, phù hợp với nhu cầu của phụ nữ lái xe. Những công nghệ hỗ trợ lái và thiết kế tiện nghi của Vios đã giúp chiếc xe này trở thành lựa chọn hàng đầu trong phân khúc sedan cỡ B tại Việt Nam.",
-    "link": "https://vnexpress.net/yeu-to-thuyet-phuc-khach-nu-cua-toyota-vios-4858857.html",
-    "cat": "oto-xe-may",
-    "positivity": 8,
-    "importance": 7,
-    "question": "Tại sao khách hàng nữ lại chọn Toyota Vios?",
-    "answers": [
-      {
-        "text": "Vì xe có thiết kế hiện đại và tính năng an toàn cao.",
-        "correct": true
-      },
-      {
-        "text": "Vì xe có động cơ mạnh mẽ hơn các mẫu khác.",
-        "correct": false
-      },
-      {
-        "text": "Vì xe có giá bán thấp nhất trên thị trường.",
-        "correct": false
-      },
-      {
-        "text": "Vì xe không tốn nhiều xăng khi chạy.",
-        "correct": false
-      },
-      {
-        "text": "Vì xe có nhiều màu sắc lựa chọn.",
         "correct": false
       }
     ]
@@ -4071,37 +4098,6 @@
       },
       {
         "text": "Một người bạn mới",
-        "correct": false
-      }
-    ]
-  },
-  {
-    "title": "Thị trường mua bán \"key\" IELTS sôi động sát ngày chuyển sang thi máy",
-    "content": "Thị trường mua bán \"key\" IELTS đang trở nên sôi động khi kỳ thi này sắp chuyển sang hình thức thi máy. Các \"key\" được chào bán với giá từ 500.000 đồng đến hàng chục triệu đồng trên mạng xã hội, khiến nhiều thí sinh lớp 12 tìm kiếm cơ hội đạt điểm số cao hơn. Tuy nhiên, việc mua bán này không đảm bảo kết quả thi và phản ánh thực trạng học vì điểm số trong hệ thống giáo dục Việt Nam. Các chuyên gia cũng nhấn mạnh rằng điều này ảnh hưởng tiêu cực đến những thí sinh nghiêm túc, trong khi việc thi máy được kỳ vọng sẽ cải thiện tính bảo mật của đề thi.",
-    "link": "https://dantri.com.vn/giao-duc/thi-truong-mua-ban-key-ielts-soi-dong-sat-ngay-chuyen-sang-thi-may-20250314003758239.htm",
-    "cat": "giao-duc",
-    "positivity": 4,
-    "importance": 8,
-    "question": "Tại sao thị trường mua bán \"key\" IELTS lại sôi động trước kỳ thi chuyển sang thi máy?",
-    "answers": [
-      {
-        "text": "Bởi nhiều thí sinh muốn đạt điểm cao hơn",
-        "correct": true
-      },
-      {
-        "text": "Vì các trung tâm dạy tiếng Anh quảng cáo",
-        "correct": false
-      },
-      {
-        "text": "Để tiết kiệm thời gian ôn tập",
-        "correct": false
-      },
-      {
-        "text": "Vì đề thi khó hơn trước",
-        "correct": false
-      },
-      {
-        "text": "Vì bạn bè khuyến khích mua key",
         "correct": false
       }
     ]
