--- a/home_quizzes.html
+++ b/home_quizzes.html
@@ -471,6 +471,33 @@
     */
     const newsData = [
   {
+    "title": "Đan Mạch cảnh báo chiến tranh nếu Mỹ sáp nhập Greenland",
+    "content": "Quan chức Đan Mạch cảnh báo rằng kế hoạch của Tổng thống Mỹ Donald Trump về việc sáp nhập Greenland có thể dẫn đến chiến tranh giữa Mỹ và Đan Mạch. Chủ tịch Ủy ban Quốc phòng Đan Mạch, Rasmus Jarlov, nhấn mạnh rằng ý tưởng này hoàn toàn không thể chấp nhận và chỉ có thể xảy ra nếu Mỹ xâm lược quân sự. Greenland đã thể hiện rõ ràng mong muốn duy trì quyền tự trị và không muốn trở thành một phần của Mỹ.",
+    "link": "https://dantri.com.vn/the-gioi/dan-mach-canh-bao-chien-tranh-neu-my-sap-nhap-greenland-20250315074926521.htm",
+    "cat": "the-gioi",
+    "positivity": 2,
+    "importance": 8,
+    "question": "Tại sao Đan Mạch cảnh báo về khả năng chiến tranh với Mỹ liên quan đến Greenland?",
+    "answers": [
+      {
+        "text": "Vì kế hoạch sáp nhập Greenland của Mỹ có thể dẫn đến xung đột.",
+        "correct": true
+      },
+      {
+        "text": "Bởi Greenland muốn độc lập hoàn toàn khỏi Đan Mạch.",
+        "correct": false
+      },
+      {
+        "text": "Vì Mỹ đã có quân đội ở Greenland.",
+        "correct": false
+      },
+      {
+        "text": "Bởi Đan Mạch không đồng ý với chính sách của Mỹ.",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "2 đứa trẻ xuất hiện trong \"cuộc phỏng vấn thảm họa\" giờ ra sao?",
     "content": "Bài viết cập nhật về gia đình ông Robert E. Kelly, người nổi tiếng với \"cuộc phỏng vấn thảm họa\" năm 2017, trong đó hai con nhỏ của ông bất ngờ xuất hiện gây ra cảnh hỗn loạn. Sau 8 năm, con gái ông, Marion, hiện đã 12 tuổi, và con trai, James, sắp tròn 9 tuổi. Ông Kelly bày tỏ sự biết ơn vì công chúng đã nhìn nhận sự cố một cách hài hước và chân thực, giúp gia đình ông gắn bó hơn. Ông cũng nhấn mạnh tầm quan trọng của sự hài hước trong cuộc sống gia đình, đặc biệt là với những bậc phụ huynh nuôi con nhỏ.",
     "link": "https://dantri.com.vn/giao-duc/2-dua-tre-xuat-hien-trong-cuoc-phong-van-tham-hoa-gio-ra-sao-20250314091621739.htm",
@@ -838,33 +865,6 @@
     ]
   },
   {
-    "title": "Trẻ em không phải cỗ máy đạt thành tích",
-    "content": "Bài viết nhấn mạnh rằng việc đặt kỳ vọng quá cao vào trẻ em trong học tập có thể dẫn đến áp lực tâm lý nghiêm trọng và ảnh hưởng đến sức khỏe tinh thần của các em. Nhiều phụ huynh mong muốn con cái đạt thành tích vượt trội, điều này vô tình tạo ra gánh nặng cho trẻ. Các chuyên gia khuyên rằng cần tạo môi trường học tập thoải mái, giúp trẻ phát triển phẩm chất và năng lực mà không bị áp lực thành tích quá lớn.",
-    "link": "https://dantri.com.vn/giao-duc/tre-em-khong-phai-co-may-dat-thanh-tich-20250314105932953.htm",
-    "cat": "giao-duc",
-    "positivity": 6,
-    "importance": 8,
-    "question": "Tại sao trẻ em không nên bị áp lực trong học tập?",
-    "answers": [
-      {
-        "text": "Vì điều này có thể gây tổn thương tâm lý cho trẻ.",
-        "correct": true
-      },
-      {
-        "text": "Vì trẻ em cần phải thi đấu để có thành tích cao.",
-        "correct": false
-      },
-      {
-        "text": "Vì trẻ em nên chỉ học cho vui mà không cần kết quả.",
-        "correct": false
-      },
-      {
-        "text": "Vì áp lực giúp trẻ em phát triển nhanh hơn.",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "Kim Soo Hyun bị tố nói dối, công bố tâm thư của mẹ Kim Sae Ron",
     "content": "Kim Soo Hyun đã bị cáo buộc nói dối về mốc thời gian hẹn hò với Kim Sae Ron trong một buổi phát sóng trực tuyến của kênh YouTube Viện Garo Sero. Kênh này đã công bố tâm thư của mẹ Kim Sae Ron, trong đó bà khẳng định con gái mình không phải là người như truyền thông đã miêu tả và yêu cầu pháp luật can thiệp vào những thông tin sai lệch. Đồng thời, công ty quản lý của Kim Soo Hyun cũng xác nhận rằng tài tử này đang gặp áp lực tâm lý và có thể đã rời Hàn Quốc.",
     "link": "https://dantri.com.vn/giai-tri/kim-soo-hyun-bi-to-noi-doi-cong-bo-tam-thu-cua-me-kim-sae-ron-20250314200757713.htm",
@@ -918,6 +918,33 @@
       },
       {
         "text": "Vì Việt Nam có nhiều món ăn ngon.",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Trẻ em không phải cỗ máy đạt thành tích",
+    "content": "Bài viết nhấn mạnh rằng việc đặt kỳ vọng quá cao vào trẻ em trong học tập có thể dẫn đến áp lực tâm lý nghiêm trọng và ảnh hưởng đến sức khỏe tinh thần của các em. Nhiều phụ huynh mong muốn con cái đạt thành tích vượt trội, điều này vô tình tạo ra gánh nặng cho trẻ. Các chuyên gia khuyên rằng cần tạo môi trường học tập thoải mái, giúp trẻ phát triển phẩm chất và năng lực mà không bị áp lực thành tích quá lớn.",
+    "link": "https://dantri.com.vn/giao-duc/tre-em-khong-phai-co-may-dat-thanh-tich-20250314105932953.htm",
+    "cat": "giao-duc",
+    "positivity": 6,
+    "importance": 8,
+    "question": "Tại sao trẻ em không nên bị áp lực trong học tập?",
+    "answers": [
+      {
+        "text": "Vì điều này có thể gây tổn thương tâm lý cho trẻ.",
+        "correct": true
+      },
+      {
+        "text": "Vì trẻ em cần phải thi đấu để có thành tích cao.",
+        "correct": false
+      },
+      {
+        "text": "Vì trẻ em nên chỉ học cho vui mà không cần kết quả.",
+        "correct": false
+      },
+      {
+        "text": "Vì áp lực giúp trẻ em phát triển nhanh hơn.",
         "correct": false
       }
     ]
@@ -1066,33 +1093,6 @@
     ]
   },
   {
-    "title": "Sa bẫy mua 'thần dược' trên mạng",
-    "content": "Chị Lan đã mua loại \"thần dược\" được quảng cáo trên TikTok nhằm giúp con gái tăng cân, nhưng sau một tháng sử dụng, bé không những không tăng cân mà còn bị rối loạn nội tiết. Nhiều người khác cũng rơi vào bẫy tương tự khi sử dụng thuốc giảm cân và mỹ phẩm không rõ nguồn gốc, dẫn đến những tác hại nghiêm trọng cho sức khỏe. Bộ Y tế đã cảnh báo về tình trạng quảng cáo sai lệch và yêu cầu người dân thận trọng khi mua sản phẩm qua mạng, đồng thời đề xuất các biện pháp quản lý chặt chẽ hơn đối với việc kinh doanh thuốc trực tuyến.",
-    "link": "https://vnexpress.net/sa-bay-mua-than-duoc-tren-mang-4855106.html",
-    "cat": "suc-khoe",
-    "positivity": 2,
-    "importance": 9,
-    "question": "Tại sao nhiều người tiêu dùng lại bị lừa khi mua thuốc trên mạng?",
-    "answers": [
-      {
-        "text": "Vì quảng cáo thổi phồng công dụng của sản phẩm.",
-        "correct": true
-      },
-      {
-        "text": "Do giá sản phẩm quá cao.",
-        "correct": false
-      },
-      {
-        "text": "Vì sản phẩm có nguồn gốc xuất xứ rõ ràng.",
-        "correct": false
-      },
-      {
-        "text": "Do người tiêu dùng không quan tâm đến thông tin sản phẩm.",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "Phối cảnh công viên điện ảnh Thủ Thiêm ven sông Sài Gòn",
     "content": "Công viên điện ảnh Thủ Thiêm ven sông Sài Gòn sẽ bao gồm 7 khu chức năng chính, nhằm tạo nên một điểm nhấn văn hóa cho TP HCM. Các khu chức năng bao gồm phim trường, bảo tàng điện ảnh, khu thương mại và dịch vụ, cùng với sân khấu sự kiện và rạp chiếu phim ven sông. Dự án được chia thành ba giai đoạn phát triển, với mục tiêu không chỉ nâng cao trải nghiệm văn hóa cho du khách mà còn cải thiện cảnh quan khu vực ven sông.",
     "link": "https://vnexpress.net/phoi-canh-cong-vien-dien-anh-thu-thiem-ven-song-sai-gon-4861047.html",
@@ -1119,6 +1119,33 @@
       },
       {
         "text": "3",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Sa bẫy mua 'thần dược' trên mạng",
+    "content": "Chị Lan đã mua loại \"thần dược\" được quảng cáo trên TikTok nhằm giúp con gái tăng cân, nhưng sau một tháng sử dụng, bé không những không tăng cân mà còn bị rối loạn nội tiết. Nhiều người khác cũng rơi vào bẫy tương tự khi sử dụng thuốc giảm cân và mỹ phẩm không rõ nguồn gốc, dẫn đến những tác hại nghiêm trọng cho sức khỏe. Bộ Y tế đã cảnh báo về tình trạng quảng cáo sai lệch và yêu cầu người dân thận trọng khi mua sản phẩm qua mạng, đồng thời đề xuất các biện pháp quản lý chặt chẽ hơn đối với việc kinh doanh thuốc trực tuyến.",
+    "link": "https://vnexpress.net/sa-bay-mua-than-duoc-tren-mang-4855106.html",
+    "cat": "suc-khoe",
+    "positivity": 2,
+    "importance": 9,
+    "question": "Tại sao nhiều người tiêu dùng lại bị lừa khi mua thuốc trên mạng?",
+    "answers": [
+      {
+        "text": "Vì quảng cáo thổi phồng công dụng của sản phẩm.",
+        "correct": true
+      },
+      {
+        "text": "Do giá sản phẩm quá cao.",
+        "correct": false
+      },
+      {
+        "text": "Vì sản phẩm có nguồn gốc xuất xứ rõ ràng.",
+        "correct": false
+      },
+      {
+        "text": "Do người tiêu dùng không quan tâm đến thông tin sản phẩm.",
         "correct": false
       }
     ]
@@ -1236,37 +1263,6 @@
     ]
   },
   {
-    "title": "Ga T3 sẽ tiếp nhận khoảng 80% khách bay nội địa ở Tân Sơn Nhất",
-    "content": "Ga T3 tại sân bay Tân Sơn Nhất sẽ tiếp nhận khoảng 80% khách bay nội địa, chủ yếu từ hai hãng hàng không Vietnam Airlines và Vietjet Air, nhằm giảm tải cho ga T1 đã quá tải nhiều năm. Dự kiến, ga T3 sẽ chính thức khai thác từ ngày 30/4/2025 sau khi tổ chức các chuyến bay thử nghiệm. Với công suất phục vụ lên tới 20 triệu khách mỗi năm, T3 sẽ nâng tổng công suất của sân bay lên 50 triệu khách mỗi năm, đồng thời cải thiện tình trạng giao thông xung quanh.",
-    "link": "https://vnexpress.net/ga-t3-se-tiep-nhan-khoang-80-khach-bay-noi-dia-o-tan-son-nhat-4861482.html",
-    "cat": "thoi-su",
-    "positivity": 8,
-    "importance": 9,
-    "question": "Khi nào ga T3 tại Tân Sơn Nhất sẽ chính thức khai thác?",
-    "answers": [
-      {
-        "text": "Ngày 30/4/2025",
-        "correct": true
-      },
-      {
-        "text": "Ngày 1/5/2025",
-        "correct": false
-      },
-      {
-        "text": "Ngày 15/4/2025",
-        "correct": false
-      },
-      {
-        "text": "Ngày 1/6/2025",
-        "correct": false
-      },
-      {
-        "text": "Ngày 10/5/2025",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "Gần 32% lao động TP HCM tìm việc lương trên 20 triệu đồng mỗi tháng",
     "content": "Gần 32% lao động ở TP HCM tìm kiếm việc làm với mức lương trên 20 triệu đồng mỗi tháng, trong khi chỉ khoảng 9,77% số vị trí tuyển dụng tại các doanh nghiệp đáp ứng được yêu cầu này. Theo báo cáo của UBND TP HCM, lao động có trình độ đại học trở lên chiếm gần 68% trong khi nhu cầu tuyển dụng chủ yếu tập trung vào lao động phổ thông. Điều này cho thấy sự mất cân đối giữa mong muốn của người lao động và nhu cầu thực tế của thị trường lao động tại thành phố.",
     "link": "https://vnexpress.net/gan-32-lao-dong-tp-hcm-tim-viec-luong-tren-20-trieu-dong-moi-thang-4861495.html",
@@ -1293,6 +1289,37 @@
       },
       {
         "text": "3,64%",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Ga T3 sẽ tiếp nhận khoảng 80% khách bay nội địa ở Tân Sơn Nhất",
+    "content": "Ga T3 tại sân bay Tân Sơn Nhất sẽ tiếp nhận khoảng 80% khách bay nội địa, chủ yếu từ hai hãng hàng không Vietnam Airlines và Vietjet Air, nhằm giảm tải cho ga T1 đã quá tải nhiều năm. Dự kiến, ga T3 sẽ chính thức khai thác từ ngày 30/4/2025 sau khi tổ chức các chuyến bay thử nghiệm. Với công suất phục vụ lên tới 20 triệu khách mỗi năm, T3 sẽ nâng tổng công suất của sân bay lên 50 triệu khách mỗi năm, đồng thời cải thiện tình trạng giao thông xung quanh.",
+    "link": "https://vnexpress.net/ga-t3-se-tiep-nhan-khoang-80-khach-bay-noi-dia-o-tan-son-nhat-4861482.html",
+    "cat": "thoi-su",
+    "positivity": 8,
+    "importance": 9,
+    "question": "Khi nào ga T3 tại Tân Sơn Nhất sẽ chính thức khai thác?",
+    "answers": [
+      {
+        "text": "Ngày 30/4/2025",
+        "correct": true
+      },
+      {
+        "text": "Ngày 1/5/2025",
+        "correct": false
+      },
+      {
+        "text": "Ngày 15/4/2025",
+        "correct": false
+      },
+      {
+        "text": "Ngày 1/6/2025",
+        "correct": false
+      },
+      {
+        "text": "Ngày 10/5/2025",
         "correct": false
       }
     ]
@@ -1796,33 +1823,6 @@
     ]
   },
   {
-    "title": "Techcombank dẫn dắt cuộc cách mạng tăng trưởng và đổi mới trong ngành ngân hàng",
-    "content": "Techcombank đã khẳng định vị thế dẫn đầu trong ngành ngân hàng với lợi nhuận trước thuế đạt 27.500 tỷ đồng, tăng 20,3% so với năm trước. Ngân hàng này đã đầu tư mạnh vào công nghệ như trí tuệ nhân tạo và máy học, giúp tối ưu hóa dịch vụ và thu hút gần 2 triệu khách hàng mới. Techcombank tiếp tục duy trì tỉ lệ CASA cao nhất trong ngành, củng cố vị thế cạnh tranh và mở rộng nguồn thu nhập ngoài lãi.",
-    "link": "https://tuoitre.vn/techcombank-dan-dat-cuoc-cach-mang-tang-truong-va-doi-moi-trong-nganh-ngan-hang-20250314192433628.htm",
-    "cat": "kinh-doanh",
-    "positivity": 9,
-    "importance": 8,
-    "question": "Techcombank đã đạt được những thành tựu gì trong năm 2024?",
-    "answers": [
-      {
-        "text": "Lợi nhuận trước thuế tăng 20,3% và thu hút gần 2 triệu khách hàng mới.",
-        "correct": true
-      },
-      {
-        "text": "Cắt giảm chi phí hoạt động đáng kể.",
-        "correct": false
-      },
-      {
-        "text": "Không có sự thay đổi nào trong chiến lược.",
-        "correct": false
-      },
-      {
-        "text": "Giảm tỉ lệ CASA xuống dưới 30%.",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "Có thể nhận biết thủy đậu trong giai đoạn ủ bệnh không?",
     "content": "Trong giai đoạn ủ bệnh của thủy đậu, từ 10-21 ngày sau khi nhiễm virus, người bệnh không có triệu chứng rõ ràng nào để nhận biết. Thời gian lây nhiễm bắt đầu từ 1-2 ngày trước khi phát ban xuất hiện. Để phòng bệnh, tiêm vaccine là biện pháp hiệu quả nhất, và có ba loại vaccine thủy đậu hiện có tại Việt Nam. Người bệnh cần chăm sóc đúng cách và theo dõi các dấu hiệu để tránh biến chứng.",
     "link": "https://vnexpress.net/co-the-nhan-biet-thuy-dau-trong-giai-doan-u-benh-khong-4861443.html",
@@ -1849,6 +1849,33 @@
       },
       {
         "text": "Có, có thể thấy triệu chứng chảy nước mũi.",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Techcombank dẫn dắt cuộc cách mạng tăng trưởng và đổi mới trong ngành ngân hàng",
+    "content": "Techcombank đã khẳng định vị thế dẫn đầu trong ngành ngân hàng với lợi nhuận trước thuế đạt 27.500 tỷ đồng, tăng 20,3% so với năm trước. Ngân hàng này đã đầu tư mạnh vào công nghệ như trí tuệ nhân tạo và máy học, giúp tối ưu hóa dịch vụ và thu hút gần 2 triệu khách hàng mới. Techcombank tiếp tục duy trì tỉ lệ CASA cao nhất trong ngành, củng cố vị thế cạnh tranh và mở rộng nguồn thu nhập ngoài lãi.",
+    "link": "https://tuoitre.vn/techcombank-dan-dat-cuoc-cach-mang-tang-truong-va-doi-moi-trong-nganh-ngan-hang-20250314192433628.htm",
+    "cat": "kinh-doanh",
+    "positivity": 9,
+    "importance": 8,
+    "question": "Techcombank đã đạt được những thành tựu gì trong năm 2024?",
+    "answers": [
+      {
+        "text": "Lợi nhuận trước thuế tăng 20,3% và thu hút gần 2 triệu khách hàng mới.",
+        "correct": true
+      },
+      {
+        "text": "Cắt giảm chi phí hoạt động đáng kể.",
+        "correct": false
+      },
+      {
+        "text": "Không có sự thay đổi nào trong chiến lược.",
+        "correct": false
+      },
+      {
+        "text": "Giảm tỉ lệ CASA xuống dưới 30%.",
         "correct": false
       }
     ]
